--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -22,11 +22,11 @@ jobs:
           registry-url: https://npm.github.aimdt.com
 
       - name: Install dependencies
-        run: npm install eslint -D
+        run: npm install eslint
         
       - name: Eslint review
         if: steps.changes.outputs.js == 'true'
-        uses: reviewdog/action-eslint@v1.3
+        uses: reviewdog/action-eslint@v1
         with:
           reporter: github-pr-review
           fail_on_error: true
