--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -22,7 +22,7 @@ jobs:
           registry-url: https://npm.github.aimdt.com
 
       - name: Install dependencies
-        run: npm install eslint
+        run: npm install eslint -D
         
       - name: Eslint review
         if: steps.changes.outputs.js == 'true'
